--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
   "dependencies": {
     "phaser": "^3.60.0"
-  }
+  },
+  "name": "dungeon",
+  "description": "HOW TO START?\r npm start",
+  "version": "1.0.0",
+  "main": "main.js",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^5.81.0",
+    "webpack-dev-server": "^4.13.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/webpack-dev-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AmondChocolateShake/JS_game.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AmondChocolateShake/JS_game/issues"
+  },
+  "homepage": "https://github.com/AmondChocolateShake/JS_game#readme"
 }
